Changed post css to stop <p>justify on mobile res

--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -112,7 +112,9 @@
     margin: 0;
     padding-top: $spacing-full - 15;
     padding-bottom: $spacing-full - 15;
-    text-align: justify;
+    @media (min-width: $on-mobile){
+    text-align: justify;}
+    
   }
 
   ul.task-list {
